# firestore-tabularis

./: .gitignore  .tabularis  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  firebase.json  justfile  manifest.json  package.json
.github/: README.md
.github/workflows/: release.yml
docs/: ROADMAP.md  integration-tests.md  schema-overrides.md
docs/superpowers/brainstorms/: 2026-05-09-brainstorm-holistic.md  2026-05-09-brainstorm-power-user.md  2026-05-09-brainstorm-schemaful-mode.md  2026-05-09-brainstorm-ui-extensions.md
docs/superpowers/plans/: 2026-05-08-phase-1-firestore-read-only-driver.md  2026-05-08-phase-2-firestore-query-layer.md
docs/superpowers/specs/: 2026-05-08-phase-1-firestore-read-only-driver-design.md  2026-05-08-phase-2-firestore-query-layer-design.md
just/: emulator.just  plugin.just  ui.just
src/: cache.rs  client.rs  coercion.rs  error.rs  firestore_error.rs  firestore_filter.rs  main.rs  models.rs  query_parser.rs  rpc.rs  schema_infer.rs  schema_overrides.rs  state.rs
src/handlers/: crud.rs  metadata.rs  query.rs
src/utils/: identifiers.rs  pagination.rs
tasks/: test_queries_advisors.sql  todo.md
tests/: firestore_emulator.rs
tests/fixtures/: free-port.ts  seed.sh  seed.ts
