[package]
name = "firestore-plugin"
version = "0.1.0"
edition = "2021"
description = "Tabularis driver plugin for Google Firestore"
license = "Apache-2.0"
publish = false

[dependencies]
firestore = { version = "0.48.0", default-features = false, features = ["tls-webpki-roots"] }
gcloud-sdk = { version = "0.29", features = ["google-firestore-v1"], default-features = false }
futures = "0.3.32"
once_cell = "1.21.4"
regex = "1.12.3"
rustls = "0.23.40"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.2", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
